--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ a {
 /* Contact Me */
 .contact-me {
   width: 100%;
-  height: 75vh;
+  /* height: 75vh; */
   padding: 3em 3em;
   background-color: #2c5f2d;
   color: #ffffff;
@@ -403,6 +403,10 @@ a {
     padding: 3em 3em;
   }
 
+  .contact-me-content a {
+    text-decoration: underline;
+  }
+
   .contact-me-icons {
     display: flex;
     justify-content: center;
@@ -420,7 +424,7 @@ a {
   /* my work section */
 
   .my-work {
-    margin-top: 35em;
+    margin-top: 40em;
   }
   .contact-me-content {
     width: auto;
