--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a {
   position: relative;
   background-color: #ffffff;
   width: 60%;
-  height: 50vh;
+  /* height: 50vh; */
   padding: 1.5em 0.5em;
   -webkit-box-shadow: -2px -1px 15px 7px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: -3px -2px 30px 14px rgba(0, 0, 0, 0.425);
@@ -92,8 +92,9 @@ a {
 }
 
 .about-me-icons {
-  float: inline-end;
-  margin-top: 28px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
 }
 
 .about-me-icons i {
@@ -239,7 +240,7 @@ a {
   .about-me {
     margin: 5em auto;
     width: 80%;
-    height: 50vh;
+    height: auto;
   }
   .about-me h3 {
     font-size: 2rem;
@@ -354,15 +355,22 @@ a {
     height: auto;
     box-shadow: none;
     width: 100%;
-    /* height: 50vh; */
     padding: 1.5em 0.5em;
   }
 
+  .about-me p {
+    text-align: center;
+  }
+
   .about-me-icons {
-    float: none;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 3em;
+  }
+  .about-me-icons i {
+    font-size: 3rem;
+    margin: 0.3em;
   }
 
   .my-work h3 {
